Fix responsive thing on tablet screens

--- a/static/style.css
+++ b/static/style.css
@@ -99,8 +99,7 @@ pre > code {
   .pull-right {
     text-align: left;
     max-width: 100%;
-    grid-column: 10 / 12;
-    padding-left: 20%;
+    grid-column: 9 / 13;
     grid-row: 1;
   }
 
@@ -109,7 +108,7 @@ pre > code {
   }
 
   .pull-left {
-    grid-column: 3 / 10;
+    grid-column: 2 / 9;
     grid-row: 1;
   }
   .content {
@@ -121,7 +120,7 @@ pre > code {
   }
 }
 
-@media only screen and (min-width: 1400px) {
+@media only screen and (min-width: 1200px) {
   .pull-right {
     max-width: 100%;
     text-align: left;
